@@ -19,7 +19,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class TestHelper {
 
@@ -33,7 +32,7 @@ public class TestHelper {
 	 * @throws IOException when it can't locate / read the file
 	 */
 	public static String getFixture(final String name) throws IOException {
-		Path path = Paths.get("src/test/resources/fixtures/" + name);
+		Path path = Path.of("src/test/resources/fixtures/" + name);
 		return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
 	}
 
